7/30/13 make particleColor an option for Solute, not a constructor param
7/30/13 improve performance of concentration display by drawing arrow once and changing its y position, #4
7/30/13 improve performance of drawing solution by making more efficient use of shapes, #4
7/29/13 add google-analytics.js to html and package.json
7/29/13 add meta tags that are in chipper.sim.html
7/29/13 use English string as default <title>
7/29/13 pull change to scenery.SVGLayer that fixes beers-law-lab#20
# 0.0.0-9 7/26/13
7/26/13 fix up package.json to work with build.sh changes (chipper#12)
# 0.0.0-8 7/25/13
7/25/13 add a bit of space between left-edge of play area and the "Solute Amount" slider
7/25/13 increase width of play area so that concentration value doesn't fall off right edge when "Show values" is checked
# 0.0.0-7 7/23/13
7/23/13 fix range of Volume slider (bug introduced when making an unnecessary change to address a REVIEW comment)
# 0.0.0-6 7/22/13
7/22/13 create local ResetAllButton that uses images provided by SST
7/19/13 fix behavior for 'dev' query param
7/19/13 address REVIEW comments
7/19/13 delete placeholder icon for MolarityTab, fixed by joist#15
7/17/13 replace MFont with PhetFont
7/11/13 remove jquery shim from config.js
7/11/13 make MSymbols return an object literal
7/11/13 change double quotes (") to single quotes (') throughout
6/27/13 update copyright
6/24/13 add credits
6/21/13 center Reset All button under concentration display, account for i18n of combo box
6/21/13 increase the height of items in the Solute combo box, to improve tablet usability
6/21/13 reformat code
6/21/13 provide prototype properties via inherit() instead of attaching to Type.prototype
# 0.0.0-5 6/21/13
6/21/13 delete unused mvt
6/21/13 adjust layout so that play area content is vertically centered
6/21/13 switch to SVG renderer to improve text quality (molarity#1)
6/21/13 fix max value on ConcentrationDisplay